<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/atp__dialog_confirm_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tv_ask_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/stop_game"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/atp__btn_template"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="70dp"
                android:textColor="@color/white"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/atp__btn_template"
                android:textColor="@color/white"
                android:text="@string/accept"/>

        </LinearLayout>


    </LinearLayout>

</layout>