<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/atp__home_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_number_question"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_money_game_over"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="25sp"
            android:padding="20dp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/edt_name"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_name"
            android:textColorHint="@android:color/holo_green_dark"
            android:layout_gravity="center"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/save"
            android:layout_gravity="center"/>

    </LinearLayout>

</layout>