<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/atp__dialog_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_rule_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_detail"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center|start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp" />

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_50_50_help"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/atp__image_help_5050"
                android:layout_marginTop="10dp"
                android:layout_marginStart="35dp"/>

            <TextView
                android:id="@+id/tv_50_50_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_50_50_help"
                android:textColor="@color/white"
                android:layout_marginTop="13dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textSize="15sp"
                android:gravity="center|start"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_call_help"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/atp__image_help_call"
                android:layout_marginTop="10dp"
                android:layout_marginStart="35dp"/>

            <TextView
                android:id="@+id/tv_call_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_help"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="13dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:gravity="center|start"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_ask_the_audience_help"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/atp__image_help_audience"
                android:layout_marginTop="10dp"
                android:layout_marginStart="35dp"/>

            <TextView
                android:id="@+id/tv_ask_the_audience_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_the_audience_help"
                android:layout_marginTop="9dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textColor="@color/white"
                android:gravity="center|start"
                android:textSize="15sp"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_change_question_help"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/atp__image_help_change_question"
                android:layout_marginTop="10dp"
                android:layout_marginStart="35dp"/>

            <TextView
                android:id="@+id/tv_change_question_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_question_help"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:gravity="center|start"
                android:textSize="15sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:backgroundTint="#c6007c"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>


    </LinearLayout>


</layout>